fixed contrast

--- a/src/components/ayat/ayat.css
+++ b/src/components/ayat/ayat.css
@@ -5,11 +5,11 @@
   align-items: center;
   width: 100%;
   padding: 0rem 2rem;
-  background: linear-gradient(
+  background-image: linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.4) 0%,
+    rgba(0, 0, 0, 0.7) 0%,
     rgba(0, 0, 0, 1) 50%,
-    rgba(0, 0, 0, 0.4) 100%
+    rgba(0, 0, 0, 0.7) 100%
   );
 }
 
@@ -24,7 +24,11 @@
 .ayat::before {
   content: "";
   flex-grow: 1;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), transparent);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7) 0%,
+    transparent 40%
+  );
   z-index: 2;
   width: 100%;
 }
@@ -32,7 +36,11 @@
 .ayat::after {
   flex-grow: 1;
   content: "";
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), transparent);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7) 0%,
+    transparent 40%
+  );
   z-index: 2;
   width: 100%;
 }
